; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/rtmp-services/extr_rtmp-custom.c_rtmp_custom_password.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/rtmp-services/extr_rtmp-custom.c_rtmp_custom_password.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtmp_custom = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @rtmp_custom_password to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @rtmp_custom_password(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.rtmp_custom*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = bitcast i8* %5 to %struct.rtmp_custom*
  store %struct.rtmp_custom* %6, %struct.rtmp_custom** %4, align 8
  %7 = load %struct.rtmp_custom*, %struct.rtmp_custom** %4, align 8
  %8 = getelementptr inbounds %struct.rtmp_custom, %struct.rtmp_custom* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %16

12:                                               ; preds = %1
  %13 = load %struct.rtmp_custom*, %struct.rtmp_custom** %4, align 8
  %14 = getelementptr inbounds %struct.rtmp_custom, %struct.rtmp_custom* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %2, align 8
  br label %16

16:                                               ; preds = %12, %11
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
